Finished photos page by laying out photos, adding credit, and creating thumbnail photos. Fixed the invisible header on mobile occluding content interactivity. Fixed a Firefox rendering min-height bug.

--- a/index.css
+++ b/index.css
@@ -95,6 +95,7 @@
 	top: 0;
 	left: 0;
 	z-index: 1;
+	border-radius: 10px;
 	-webkit-transition: -webkit-transform 0.5s;
 	transition: transform 0.5s;
 }
@@ -140,6 +141,7 @@
 	max-width: 100%;
 	height: auto;
 	max-height: 100%;
+	border-radius: 10px;
 	-webkit-transition: -webkit-transform 0.1s;
 	transition: transform 0.1s;
 }
