--- a/photos/index.css
+++ b/photos/index.css
@@ -1,7 +1,57 @@
-#card1 img {
-	max-width: 300px;
+#card1 h4 {
+	font-family: "Pitch Sans", sans-serif;
+	font-weight: 500;
+	font-size: 16px;
+	margin-top: -20px;
+	color: #c8b7ad;
 }
 
-@media (max-width: 800px) {
+#card1 h4 a {
+	display: inline-block;
+	line-height: 2em;
+	color: #c8b7ad;
+	box-shadow: inset 0 -4px 0 #FFFBF8,
+				inset 0 -5px 0 rgba(200,183,173,0.3);
+}
 
+#card1 .gallery {
+	max-width: 1000px;
+	margin: 0 auto;
+}
+
+#card1 .gallery figure a {
+	display: inline-block;
+	padding: 20px;
+}
+
+#card1 .gallery figure img {
+	border-radius: 10px;
+	box-shadow: 0 15px 30px rgba(0,0,0,.1);
+}
+
+#card1 .gallery [data-orientation="portrait"] img {
+	max-width: 280px;
+	height: auto;
+}
+
+#card1 .gallery [data-orientation="landscape"] img {
+	max-height: 280px;
+	width: auto;
+	max-width: 100%;
+}
+
+@media (min-width: 800px) {
+	#card1 h1 {
+		margin-top: 50px;
+	}
+}
+
+@media (max-width: 600px) {
+	#card1 h4 {
+		font-family: "Pitch Sans", sans-serif;
+		font-weight: 600;
+		font-size: 13px;
+		margin-top: 0px;
+		color: #c8b7ad;
+	}
 }
